[gd_scene format=3 uid="uid://cmkgi7bk2np52"]

[ext_resource type="Script" uid="uid://6p6ohgm0b32f" path="res://scenes/notes/note.gd" id="1_66ngb"]
[ext_resource type="AudioStream" uid="uid://bpyk63dxau5t1" path="res://assets/audio/game/Star Break 1.ogg" id="2_6ioka"]
[ext_resource type="AudioStream" uid="uid://crnbxxoijrecg" path="res://assets/audio/game/Star Break 2.ogg" id="3_ootjf"]
[ext_resource type="AudioStream" uid="uid://27puu8x3hot3" path="res://assets/audio/game/Star Break 3.ogg" id="4_r2pak"]
[ext_resource type="AudioStream" uid="uid://dbrtnhvh63v26" path="res://assets/audio/game/Star Break 4.ogg" id="5_wpmfr"]
[ext_resource type="PackedScene" uid="uid://3wnar3ip8nvo" path="res://scenes/notes/particle_emitter_hit.tscn" id="6_tjdnf"]
[ext_resource type="Texture2D" uid="uid://cvfiwyeibwsmm" path="res://assets/visual/sprites/anim_star-spin_spritesheet.png" id="7_tjdnf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w7eif"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_66ngb"]
radius = 30.0

[sub_resource type="SphereMesh" id="SphereMesh_66ngb"]
radius = 20.0
height = 40.0

[sub_resource type="SphereMesh" id="SphereMesh_v7wvs"]
radius = 28.0
height = 54.0

[sub_resource type="SphereMesh" id="SphereMesh_7xg40"]
radius = 20.0
height = 40.0

[sub_resource type="Animation" id="Animation_7xg40"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mesh:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mesh:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mesh_hit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mesh_hit:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.95686275, 0, 0.49803922, 0.22745098)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("mesh:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("mesh_incoming:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(2.1658839e-06, 0.6219167, 0.5020108, 0.61960787)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("mesh:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("area_hit_collider/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("mesh_incoming:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("mesh_fail:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("mesh_fail:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.90588236, 0.2901961, 0, 0.61960787)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("StarSprite:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v7wvs"]
resource_name = "hit"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mesh:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mesh:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mesh_hit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mesh_hit:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.95686275, 0, 0.49803922, 0.22745098), Color(1, 0.92700005, 0.26999998, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("mesh:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_66ngb"]
resource_name = "miss"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("area_hit_collider/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mesh:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mesh_fail:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mesh_fail:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1.8024994, 1),
"update": 0,
"values": [Color(0.90588236, 0.2901961, 0, 0.61960787), Color(0.90588236, 0.2901961, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StarSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xjeh5"]
resource_name = "spawning"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mesh_incoming:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 6.0628676, 1),
"update": 0,
"values": [Color(0.62, 0.49600005, 0, 0), Color(0.83, 0.7055, 0, 0.7294118), Color(0.63, 0.44099998, 0, 0.8039216)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mesh:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("area_hit_collider/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mesh_incoming:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.02, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.99),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"send_ready"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("StarSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjeh5"]
_data = {
&"RESET": SubResource("Animation_7xg40"),
&"hit": SubResource("Animation_v7wvs"),
&"miss": SubResource("Animation_66ngb"),
&"spawning": SubResource("Animation_xjeh5")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdnf"]
atlas = ExtResource("7_tjdnf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yt2i"]
atlas = ExtResource("7_tjdnf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_joe8b"]
atlas = ExtResource("7_tjdnf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k63v4"]
atlas = ExtResource("7_tjdnf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_blmen"]
atlas = ExtResource("7_tjdnf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw3k1"]
atlas = ExtResource("7_tjdnf")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8k7yo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yt2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joe8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k63v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blmen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw3k1")
}],
"loop": true,
"name": &"default",
"speed": 6.5
}]

[node name="note" type="Node2D" unique_id=1990359077]
scale = Vector2(1.6, 1.6)
script = ExtResource("1_66ngb")
star_break_sounds = Array[AudioStream]([ExtResource("2_6ioka"), ExtResource("3_ootjf"), ExtResource("4_r2pak"), ExtResource("5_wpmfr")])

[node name="area_hit_collider" type="Area2D" parent="." unique_id=1556294286]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_hit_collider" unique_id=1577028608]
shape = SubResource("CircleShape2D_w7eif")
disabled = true

[node name="area_miss_collider" type="Area2D" parent="." unique_id=1354815213]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_miss_collider" unique_id=661419031]
shape = SubResource("CircleShape2D_66ngb")

[node name="mesh_debug_miss_collider" type="MeshInstance2D" parent="area_miss_collider" unique_id=1002781170]
visible = false
modulate = Color(0.67058825, 0.23529412, 0, 0.1882353)
z_index = 1
position = Vector2(-2.8610225e-06, 0.31249994)
scale = Vector2(1.5017006, 1.5156249)
mesh = SubResource("SphereMesh_66ngb")

[node name="mesh" type="MeshInstance2D" parent="." unique_id=2056995815]
visible = false
self_modulate = Color(0.5749194, 0.42825308, 0.1814458, 1)
z_index = 1
mesh = SubResource("SphereMesh_66ngb")

[node name="mesh_hit" type="MeshInstance2D" parent="." unique_id=975362840]
visible = false
self_modulate = Color(0.95686275, 0, 0.49803922, 0.22745098)
mesh = SubResource("SphereMesh_v7wvs")

[node name="mesh_fail" type="MeshInstance2D" parent="." unique_id=56686779]
visible = false
self_modulate = Color(0.90588236, 0.2901961, 0, 0.61960787)
mesh = SubResource("SphereMesh_7xg40")

[node name="mesh_incoming" type="MeshInstance2D" parent="." unique_id=1123951866]
self_modulate = Color(2.1658839e-06, 0.6219167, 0.5020108, 0.61960787)
mesh = SubResource("SphereMesh_7xg40")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=52593973]
libraries/ = SubResource("AnimationLibrary_xjeh5")

[node name="existence_timer" type="Timer" parent="." unique_id=859043313]
one_shot = true

[node name="particle_emitter_hit" parent="." unique_id=1676785552 instance=ExtResource("6_tjdnf")]

[node name="StarSprite" type="AnimatedSprite2D" parent="." unique_id=1679595648]
visible = false
z_index = 2
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_8k7yo")
autoplay = "default"
frame_progress = 0.40911946

[connection signal="mouse_shape_entered" from="area_hit_collider" to="." method="_on_area_2d_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="area_miss_collider" to="." method="_on_area_miss_collider_mouse_shape_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="existence_timer" to="." method="_on_existence_timer_timeout"]
